--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.4",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
