--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "crypto-js": "^4.1.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
