--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "crypto-js": "^4.1.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.4",
     "next": "13.0.4",
+    "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
