--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.4",
     "next": "13.0.4",
-    "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-toastify": "^9.1.1",
-    "react-top-loading-bar": "^2.3.1"
+    "react-top-loading-bar": "^2.3.1",
+    "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
