--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.16",
+    "axios": "^1.3.5",
     "crypto-js": "^4.1.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
