--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "axios": "^1.6.0",
+    "classnames": "^2.3.2",
     "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
