--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "styleon",
+  "name": "style",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,29 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "axios": "^1.6.0",
-    "classnames": "^2.3.2",
-    "crypto-js": "^4.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3",
-    "next": "14.0.0",
-    "paytmchecksum": "^1.5.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "react-toastify": "^9.1.3",
-    "react-top-loading-bar": "^2.3.1"
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.16",
+    "axios": "^1.3.5",
+    "crypto-js": "^4.1.1",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.4",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.7.4",
+    "next": "13.0.4",
+    "paytmchecksum": "^1.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "react-toastify": "^9.1.1",
+    "react-top-loading-bar": "^2.3.1",
+    "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
